# device-skills

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MARKET_BOSTON.md  MICROMANAGER_DEMO.md  Makefile  PHASE1_SHORTLIST.md  PLAN_CLOSEOUT.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  TODOS.md  conftest.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
devices/_template/: MEMORY.md  README.md  SKILL.md  SOUL.md  adapter.py  brain.py  driver.py  processor.py  profile.yaml  skill.yaml  visualizer.py
devices/_template/docs/: README.md  index.yaml
devices/_template/tests/: test_device.py
devices/_template/user/: MEMORY.md  calibration_log.md  system_config.md
devices/biotek-gen5/: MEMORY.md  README.md  SKILL.md  SOUL.md  __init__.py  adapter.py  brain.py  driver.py  models.py  processor.py  profile.yaml  skill.yaml  visualizer.py
devices/biotek-gen5/docs/: index.yaml
devices/biotek-gen5/docs/api/: gen5_com_interface.md  gen5_commands.md
devices/biotek-gen5/docs/formats/: csv_export_format.md  protocol_file_format.md
devices/biotek-gen5/docs/manual/: assay_protocols.md  getting_started.md
devices/biotek-gen5/docs/science/: absorbance_theory.md  data_analysis.md  fluorescence_theory.md  luminescence_theory.md
devices/biotek-gen5/docs/specs/: plate_formats.md  synergy_h1_specs.md
devices/biotek-gen5/tests/: conftest.py  test_biotek_gen5.py  test_device.py
devices/bruker-2p/: README.md  SKILL.md  SOUL.md  __init__.py  adapter.py  brain.py  driver.py  processor.py  profile.yaml  skill.yaml  visualizer.py
devices/bruker-2p/docs/api/: com_interface.md  prairielink_commands.md  prairielink_states.md
devices/bruker-2p/docs/formats/: ome_tiff_structure.md  prairie_xml_schema.md  voltage_recording.md
devices/bruker-2p/docs/manual/: operator_manual.md  safety_manual.md
devices/bruker-2p/docs/science/: calcium_imaging.md  fov_registration.md  two_photon_principles.md
devices/bruker-2p/docs/specs/: hardware_specs.md  laser_specs.md  objective_specs.md
devices/bruker-2p/tests/: test_bruker_2p.py
devices/bruker-2p/user/: MEMORY.md  calibration_log.md  system_config.md
devices/bruker-2p/user/protocols/: longitudinal_calcium.md  zstack_acquisition.md
devices/bruker-topspin/: MEMORY.md  README.md  SKILL.md  SOUL.md  __init__.py  adapter.py  brain.py  demo_cache.py  driver.py  gui_automation.py  library.py  processor.py  profile.yaml  skill.yaml  visualizer.py
devices/bruker-topspin/docs/: index.yaml
devices/bruker-topspin/docs/commands/: .2d.md  .gr.md  .ph.md  .sl0.md  .vr.md  .zi.md  about.md  abs.md  absd1.md  absnd.md  abst2.md  account.md  accumulate.md  acqu.md  adiag.md  apbk.md  apk2d.md  apkm.md  apsy.md  aqguide.md  arrange.md  ased.md  at.md  atma.md  atmm.md  atmulti.md  audit.md  autocalib.md  autogain.md  autoplot.md  autoshim.md  bc.md  bcm.md  bcm1.md  bpan.md  bsmsdisp.md  cal.md  cascade.md  cf.md  closeall.md  (+289 more)
devices/bruker-topspin/tests/: conftest.py  test_bruker_topspin.py  test_device.py
docs/plans/: 2026-03-16-expansion-review.md
src/device_skills/: __init__.py  base.py  loader.py  schema.py
tests/: test_base.py  test_loader.py  test_schema.py
